Fikser at oppgavefilter på første stønadsdag tar med seg fom og tom dato